# types/trade/query.pb.gw.go
@@ -979,6 +979,42 @@ func local_request_TradeQuery_LastYearTradeHistoricals_0(ctx context.Context, ma
 
 }
 
+func request_TradeQuery_TotalTrades_0(ctx context.Context, marshaler runtime.Marshaler, client TradeQueryClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq TotalTradesRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.TotalTrades(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_TradeQuery_TotalTrades_0(ctx context.Context, marshaler runtime.Marshaler, server TradeQueryServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq TotalTradesRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.TotalTrades(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
+func request_TradeQuery_MostTraded_0(ctx context.Context, marshaler runtime.Marshaler, client TradeQueryClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MostTradedRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.MostTraded(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_TradeQuery_MostTraded_0(ctx context.Context, marshaler runtime.Marshaler, server TradeQueryServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MostTradedRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.MostTraded(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterTradeQueryHandlerServer registers the http handlers for service TradeQuery to "mux".
 // UnaryRPC     :call TradeQueryServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -1385,6 +1421,56 @@ func RegisterTradeQueryHandlerServer(ctx context.Context, mux *runtime.ServeMux,
 
 	})
 
+	mux.Handle("GET", pattern_TradeQuery_TotalTrades_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/trade.TradeQuery/TotalTrades", runtime.WithHTTPPathPattern("/trades/total"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_TradeQuery_TotalTrades_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_TradeQuery_TotalTrades_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_TradeQuery_MostTraded_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/trade.TradeQuery/MostTraded", runtime.WithHTTPPathPattern("/assets/most-traded"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_TradeQuery_MostTraded_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_TradeQuery_MostTraded_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -1778,6 +1864,50 @@ func RegisterTradeQueryHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 
 	})
 
+	mux.Handle("GET", pattern_TradeQuery_TotalTrades_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/trade.TradeQuery/TotalTrades", runtime.WithHTTPPathPattern("/trades/total"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_TradeQuery_TotalTrades_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_TradeQuery_TotalTrades_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_TradeQuery_MostTraded_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/trade.TradeQuery/MostTraded", runtime.WithHTTPPathPattern("/assets/most-traded"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_TradeQuery_MostTraded_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_TradeQuery_MostTraded_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -1831,6 +1961,10 @@ var (
 	pattern_TradeQuery_LastMonthTradeHistoricals_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2}, []string{"trade-history", "address", "lastmonth"}, ""))
 
 	pattern_TradeQuery_LastYearTradeHistoricals_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2}, []string{"trade-history", "address", "lastyear"}, ""))
+
+	pattern_TradeQuery_TotalTrades_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"trades", "total"}, ""))
+
+	pattern_TradeQuery_MostTraded_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"assets", "most-traded"}, ""))
 )
 
 var (
@@ -1865,4 +1999,8 @@ var (
 	forward_TradeQuery_LastMonthTradeHistoricals_0 = runtime.ForwardResponseMessage
 
 	forward_TradeQuery_LastYearTradeHistoricals_0 = runtime.ForwardResponseMessage
+
+	forward_TradeQuery_TotalTrades_0 = runtime.ForwardResponseMessage
+
+	forward_TradeQuery_MostTraded_0 = runtime.ForwardResponseMessage
 )
