# types/trade/utils.go
@@ -17,3 +17,38 @@ func (x *Week) ToString() string {
 func (x *Month) ToString() string {
 	return fmt.Sprintf("Y%d-M%d", x.Year, x.Month)
 }
+
+type VolDay struct {
+	Day          int
+	Month        int
+	Year         int
+	BaseVolume   int64
+	TargetVolume int64
+	USDVolume    float64
+}
+
+type VolHour struct {
+	Hour         int
+	Day          int
+	Month        int
+	Year         int
+	BaseVolume   int64
+	TargetVolume int64
+	USDVolume    float64
+}
+
+type VolWeek struct {
+	Week         int
+	Year         int
+	BaseVolume   int64
+	TargetVolume int64
+	USDVolume    float64
+}
+
+type VolMonth struct {
+	Month        int
+	Year         int
+	BaseVolume   int64
+	TargetVolume int64
+	USDVolume    float64
+}
