# types/user/query.pb.gw.go
@@ -101,6 +101,24 @@ func local_request_UserQuery_Activities_0(ctx context.Context, marshaler runtime
 
 }
 
+func request_UserQuery_TotalUsers_0(ctx context.Context, marshaler runtime.Marshaler, client UserQueryClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq TotalUsersRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.TotalUsers(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_UserQuery_TotalUsers_0(ctx context.Context, marshaler runtime.Marshaler, server UserQueryServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq TotalUsersRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.TotalUsers(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterUserQueryHandlerServer registers the http handlers for service UserQuery to "mux".
 // UnaryRPC     :call UserQueryServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -129,6 +147,31 @@ func RegisterUserQueryHandlerServer(ctx context.Context, mux *runtime.ServeMux, 
 		}
 
 		forward_UserQuery_Activities_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_UserQuery_TotalUsers_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/user.UserQuery/TotalUsers", runtime.WithHTTPPathPattern("/users/total"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_UserQuery_TotalUsers_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_UserQuery_TotalUsers_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -195,13 +238,39 @@ func RegisterUserQueryHandlerClient(ctx context.Context, mux *runtime.ServeMux, 
 
 	})
 
+	mux.Handle("GET", pattern_UserQuery_TotalUsers_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/user.UserQuery/TotalUsers", runtime.WithHTTPPathPattern("/users/total"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_UserQuery_TotalUsers_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_UserQuery_TotalUsers_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
 var (
 	pattern_UserQuery_Activities_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"activities", "address"}, ""))
+
+	pattern_UserQuery_TotalUsers_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"users", "total"}, ""))
 )
 
 var (
 	forward_UserQuery_Activities_0 = runtime.ForwardResponseMessage
+
+	forward_UserQuery_TotalUsers_0 = runtime.ForwardResponseMessage
 )
